knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Onboarding__e/Clinician_Onboarding__e.object-meta.xml
<CustomObject>
    <label>Clinician Onboarding</label>
    <pluralLabel>Clinician Onboardings</pluralLabel>
</CustomObject>