knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Onboarding__e/fields/Fed_ID__c.field-meta.xml
<CustomField>
    <fullName>Fed_ID__c</fullName>
    <label>Fed ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>