knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Onboarding__e/fields/Global_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Global_Provider_Id__c</fullName>
    <label>Global Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>